<resources>
    <string name="app_name">Instrument pitch pipe</string>
    <string name="action_info">Info</string>

    <string name="button_tag_banjo">5-string banjo</string>
    <string name="button_tag_guitar">Guitar</string>
    <string name="button_tag_mandolin">Mandolin</string>
    <string name="button_tag_ukulele">Ukulele</string>

    <string name="dialog_about_content">(Android 8+) Long-press instrument buttons to see their names.\n\nSource code for this application available here: <a href="https://github.com/bmaupin/android-pitchpipe">https://github.com/bmaupin/android-pitchpipe</a>\n\nInstrument icons are from the <a href="https://thenounproject.com/thepyramidschool/">The Pyramid School</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons CC BY 3.0</a>\n\nSound font is <a href="http://schristiancollins.com/generaluser.php">GeneralUser GS by S. Christian Collins</a>, licensed under GeneralUser GS License v2.0</string>

    <!-- See here for translations: https://en.wikipedia.org/wiki/Key_signature_names_and_translations -->
    <string name="note_A">A</string>
    <string name="note_B">B</string>
    <string name="note_C">C</string>
    <string name="note_D">D</string>
    <string name="note_E">E</string>
    <string name="note_F">F</string>
    <string name="note_G">G</string>
</resources>