<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="40"
        android:text="@string/note_E"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="45"
        android:text="@string/note_A"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="50"
        android:text="@string/note_D"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="55"
        android:text="@string/note_G"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="59"
        android:text="@string/note_B"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/note_button_height_width"
        android:layout_height="@dimen/note_button_height_width"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?colorSecondary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="playPitchPipeNote"
        android:tag="64"
        android:text="@string/note_E"
        android:textSize="@dimen/note_button_text_size"
        app:cornerRadius="@dimen/button_corner_radius" />
</merge>
